# CAUX8-Parser

./: .gitignore  README.md  index.html  package.json
.github/workflows/: caux8-studio-build.yml
caux8_req_constructor/: README.md  auth.py  bootstrap.ts  main.ts  package.json  pnpm-lock.yaml  types.ts
caux8_req_constructor/adapters/: index.ts
caux8_req_constructor/factory/: defaults.ts  question.ts  testcase.ts
caux8_req_constructor/types/: basic.d.ts  defaults.ts  others.d.ts  question.d.ts  util.d.ts
caux8_req_constructor/types/question/: basic.d.ts  grade.d.ts  oj.d.ts  others.d.ts  redirecting.d.ts  submission.d.ts
caux8_req_constructor/types/testcase/: testcase.d.ts
caux8_studio/: README.md  package.json
caux8_studio/src/: App.vue
caux8_studio/src-tauri/: Cargo.toml
caux8_studio/src-tauri/src/: auth.rs  main.rs
caux8_studio/src-tauri/src/upload/: caux8.rs  mod.rs
caux8_studio/src/components/: Caux8SessionPanel.vue  ProblemEditorPanel.vue  ProblemImportPanel.vue  StudioSidebar.vue
caux8_studio/src/runtime/: errors.ts  export.ts  upload.ts
caux8_studio/src/studio/: use-studio-state.ts
src/: App.vue
src-tauri/: tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  runtime_error.rs
src-tauri/src/upload/: caux8.rs
src/components/: ProblemEditorPanel.vue  ProblemImportPanel.vue  StudioSidebar.vue
src/problem/adapters/: catalog.ts  moodle-xml.ts  types.ts
src/problem/importers/: fps.ts  ybt.ts
src/runtime/: session.ts
src/studio/: default-problem.ts  types.ts  use-studio-state.ts
(+14 files in other folders)
